[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ernest StankeviÄ 20201916",email = "ernest.stankevic@stud.vilniustech.lt"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
